allow for using SVG logos in the navbar
this uses our ✨new and improved✨ logo by default, but can be easily
changed by modifying `/public/logo.svg`.  the svg is loaded only once
when the application starts, so any modifications to it after a
deployment are visible immediately.

thanks to the power of CSS and SVG being able to make use of it, custom
colour schemes still work too.

--- a/config/justask.yml.example
+++ b/config/justask.yml.example
@@ -1,6 +1,9 @@
 # The site name, shown everywhere.
 site_name: "justask"
 
+# Use the SVG logo from `/public/logo.svg`
+use_svg_logo: false
+
 hostname: "justask.rrerr.net"
 https: true
 
