--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@fontsource/lexend": "^4.5.13",
     "@hotwired/turbo-rails": "^7.1.3",
     "@melloware/coloris": "^0.16.1",
     "@rails/request.js": "^0.0.6",
@@ -16,7 +17,6 @@
     "i18n-js": "^4.0",
     "jquery": "^3.6.1",
     "js-cookie": "2.2.1",
-    "lato-font": "^3.0.0",
     "popper.js": "^1.16.1",
     "rails_admin": "3.0.0",
     "regenerator-runtime": "^0.13.10",
