Address review comments from @nilsding
Co-authored-by: nilsding <nilsding@nilsding.org>

--- a/config/justask.yml.example
+++ b/config/justask.yml.example
@@ -8,6 +8,8 @@ hostname: "justask.rrerr.net"
 https: true
 
 email_from: "noreply@justask.rrerr.net"
+# Required by WebPush spec in case of problems with notifications
+contact_email: "contact@justask.rrerr.net"
 
 # Name of the "Anonymous" user. (e.g. "Anonymous Coward", "Arno Nym", "Mr. X", ...)
 anonymous_name: "Anonymous"
