Setup cssbundling-rails

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /tmp
 
 # precompiled assets/packs
+/app/assets/builds/*
+!/app/assets/builds/.keep
 /public/assets
 /public/packs
 /public/packs-test
