--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "scripts": {
     "lint": "yarn run eslint --ext .ts app/javascript",
-    "lint:fix": "yarn run eslint --ext .ts app/javascript --fix"
+    "lint:fix": "yarn run eslint --ext .ts app/javascript --fix",
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@fontsource/lexend": "^4.5.13",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
-    "@fontsource/lexend": "^4.5.13",
     "@hotwired/turbo-rails": "^7.2.4",
     "@melloware/coloris": "^0.16.1",
     "@rails/request.js": "^0.0.8",
@@ -22,6 +23,7 @@
     "popper.js": "^1.16.1",
     "rails_admin": "3.0.0",
     "regenerator-runtime": "^0.13.11",
+    "sass": "^1.57.1",
     "sweetalert": "1.1.3",
     "toastify-js": "^1.12.0",
     "typescript": "^4.9.4"
