--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@fontsource/lexend": "^4.5.13",
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo-rails": "^7.2.4",
@@ -16,7 +17,6 @@
     "cheet.js": "^0.3.3",
     "core-js": "^3.27.1",
     "croppr": "^2.3.1",
-    "font-awesome": "4.7.0",
     "i18n-js": "^4.0",
     "jquery": "^3.6.3",
     "js-cookie": "2.2.1",
