Install Bootstrap 5 and dependencies

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo-rails": "^7.2.4",
     "@melloware/coloris": "^0.16.1",
+    "@popperjs/core": "^2.11",
     "@rails/request.js": "^0.0.8",
-    "bootstrap": "^4.6.2",
+    "bootstrap": "^5.2",
     "cheet.js": "^0.3.3",
     "core-js": "^3.27.1",
     "croppr": "^2.3.1",
