--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.18.6",
     "@fontsource/lexend": "^4.5.13",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo-rails": "^7.2.4",
     "@melloware/coloris": "^0.16.1",
     "@popperjs/core": "^2.11",
@@ -29,14 +27,9 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "@rails/webpacker": "5.4.3",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
-    "eslint-plugin-import": "^2.26.0",
-    "webpack": "^4",
-    "webpack-dev-server": "^4.11.1"
+    "eslint-plugin-import": "^2.26.0"
   }
 }
