--- a/.github/workflows/retrospring.yml
+++ b/.github/workflows/retrospring.yml
@@ -99,4 +99,4 @@ jobs:
       - uses: reviewdog/action-eslint@v1
         with:
           reporter: github-check
-          eslint_flags: '--ext .ts app/javascript'
+          eslint_flags: '--ext .ts app/assets/javascript'
