add rake task to generate testing locales

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ yarn-debug.log*
 # site configuration
 /config/justask.yml
 
+# locales generated with `bin/rails locale:generate`
+/config/locales/*.en-xx.yml
+
 # local storage
 /public/export
 /public/system
