--- a/package.json
+++ b/package.json
@@ -6,37 +6,28 @@
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.18.6",
     "@fontsource/lexend": "^4.5.13",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/stimulus-webpack-helpers": "^1.0.1",
     "@hotwired/turbo-rails": "^7.2.4",
     "@melloware/coloris": "^0.16.1",
     "@popperjs/core": "^2.11",
     "@rails/request.js": "^0.0.8",
     "bootstrap": "^5.2",
     "cheet.js": "^0.3.3",
-    "core-js": "^3.27.1",
     "croppr": "^2.3.1",
-    "esbuild": "^0.16.14",
     "i18n-js": "^4.0",
     "js-cookie": "2.2.1",
-    "regenerator-runtime": "^0.13.11",
     "sass": "^1.57.1",
     "sweetalert": "1.1.3",
     "toastify-js": "^1.12.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "@rails/webpacker": "5.4.3",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
+    "esbuild": "^0.16.14",
     "eslint": "^7.16.0",
-    "eslint-plugin-import": "^2.26.0",
-    "webpack": "^4",
-    "webpack-dev-server": "^4.11.1"
+    "eslint-plugin-import": "^2.26.0"
   }
 }
