--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "lint": "yarn run eslint --ext .ts app/javascript",
     "lint:fix": "yarn run eslint --ext .ts app/javascript --fix",
+    "lint:css": "yarn run stylelint \"app/assets/stylesheets/**/*.scss\"",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
@@ -28,6 +29,9 @@
     "@typescript-eslint/parser": "^4.11.0",
     "esbuild": "^0.17.0",
     "eslint": "^7.16.0",
-    "eslint-plugin-import": "^2.27.4"
+    "eslint-plugin-import": "^2.27.4",
+    "stylelint": "^14.16.1",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-scss": "^4.3.0"
   }
 }
