--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fontsource/lexend": "^4.5.15",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@github/hotkey": "^2.0.1",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@melloware/coloris": "^0.19.1",
