questions: apply suggestions from merge request
Co-authored-by: Karina Kwiatek <6197148+raccube@users.noreply.github.com>

--- a/config/questions/en.yml
+++ b/config/questions/en.yml
@@ -1,6 +1,8 @@
 ---
 - Are you:
-  - afraid of going outside at night
+  - afraid of:
+    - going outside at night
+    - the dark
   - religious
 
 - Can you:
@@ -17,7 +19,7 @@
       - saxophone
       - trumpet
   - ski
-  - speak different languages
+  - speak a foreign language
   - swim
   - yodel
 
@@ -31,7 +33,7 @@
     - like:
       - muffins
       - social networks
-      - the city where you live
+      - the place where you live
       - to:
         - travel
         - sing out loud when no one else is around
@@ -238,6 +240,7 @@
         - season
         - snack
         - sports team
+        - text editor
         - type of cheese
         - video game
         - way to eat a potato
