questions: remove "where do you..."

--- a/config/questions/en.yml
+++ b/config/questions/en.yml
@@ -178,6 +178,7 @@
   - apps do you use daily
   - do you:
     - do:
+      - for a living
       - for fun
       - on the weekend
     - like more,:
@@ -276,10 +277,6 @@
     - woke up with:
       - some drawings in your face
       - someone else next to you
-
-- Where do you:
-  - live
-  - work
 
 - Which food do you:
   - hate
