metrics: add counter for created/destroyed users

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -134,3 +134,6 @@ Style/EndlessMethod:
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: consistent_comma
