--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,8 @@ updates:
     schedule:
       interval: weekly
     open-pull-requests-limit: 99
+    ignore:
+      - dependency-name: 'carrierwave_backgrounder'
     allow:
       - dependency-type: direct
 
