Don't check `Style/RedundantSelf` in the models directory

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -123,3 +123,7 @@ Style/TrailingCommaInHashLiteral:
 
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: consistent_comma
+
+Style/RedundantSelf:
+  Exclude:
+    - app/models/**/*
