Disable `Metrics/*Complexity` cops

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -46,7 +46,10 @@ Metrics/ClassLength:
   Enabled: false
 
 Metrics/CyclomaticComplexity:
-  Severity: refactor
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
 
 Metrics/ModuleLength:
   Enabled: false
