Ignore `Lint/MissingSuper` in `app/components/`

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,10 @@ Lint/NestedMethodDefinition:
   Exclude:
     - api/sinatra/**/*
 
+Lint/MissingSuper:
+  Exclude:
+    - app/components/**/*
+
 
 ### Metrics
 
