Add scheduled job to clean up orphaned inbox entries

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -13,4 +13,11 @@ production:
   - question
   - export
   - push_notification
+  - scheduler
 
+:scheduler:
+  :schedule:
+    inbox_cleanup:
+      every: 1m
+      class: Scheduler::InboxCleanupScheduler
+      queue: scheduler
