add readonly config option

--- a/config/justask.yml.example
+++ b/config/justask.yml.example
@@ -61,6 +61,8 @@ features:
   # Advanced (marketing) frontpage layout
   advanced_frontpage:
     enabled: false
+  # readonly mode -- users can only delete
+  readonly: false
 
 # Redis
 redis_url: "redis://localhost:6379"
